src/test/deca/context/invalid/created/SansObjet/NoInitializationVar.deca
//
//
//
//
class A{

}

{
    A newA = new A();
    newA.m();
}